<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_edit_text">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="new_user_button">New User</string>
    <string name="login_button">Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_screen_text">To The Shoe Store Inventory!</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="instructions_label">Instructions</string>
    <string name="instructions_text">"Use the Shoe Detail Screen to add shoes to your Shoe List. Press the Shoe List Button below to Navigate To the Shoe List Screen, and Press the Add Button to go to the Shoe Detail Screen. When you save a shoe on the Shoe Detail Screen, it will be added to your Shoe List. "</string>
    <string name="shoe_list">Shoe List</string>
    <string name="login_menu">Logout</string>
    <string name="add_shoe_button">Add Shoe Button</string>
    <string name="login_label">Login Screen</string>
    <string name="welcome_screen_label">Welcome</string>
    <string name="instruction_screen_label">Instructions</string>
    <string name="shoe_list_screen_label">Shoe List</string>
    <string name="shoe_detail_screen_label">Shoe Details</string>
    <string name="shoe_name_edit_text">Enter Shoe Name</string>
    <string name="company_name_edit_text">Enter Company Name</string>
    <string name="shoe_size_edit_text">Enter Shoe Size</string>
    <string name="description_edit_text">Enter Shoe Description</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="welcome_shoe_list">Here is your List of Shoes</string>
    <string name="fab_instruction">Press this Button to Add a Shoe</string>
</resources>
