<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.model.Shoe" />

        <import type="com.udacity.shoestore.ui.Converter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoeDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">


        <TextView
            android:id="@+id/shoe_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="144dp"
            android:text="@string/shoe_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_size_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text_view" />

        <TextView
            android:id="@+id/company_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/company"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text_view" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_name_edit_text"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:text="@={shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_size_edit_text"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:text="@={Converter.doubleToString(shoe.size)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/company_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/company_name_edit_text"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:text="@={shoe.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_edit_text"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:text="@={shoe.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> shoeListViewModel.cancelButton(view)}"
            android:text="@string/cancel_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_shoe_list_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_shoe_list_button"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <Button
            android:id="@+id/save_shoe_list_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> shoeListViewModel.saveShoeListButton(shoe, view)}"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>