<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>

    <!--    Constraint Layout is used to keep the button on the bottom-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeScreenLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <TextView
            android:id="@+id/welcome"
            style="@style/BoldTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@+id/welcomeScreenText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <TextView
            android:id="@+id/welcomeScreenText"
            style="@style/WelcomeTextStyle"
            android:padding="@dimen/text_padding"
            android:text="@string/welcome_screen_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <Button
            android:id="@+id/instructionsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:onClick="@{(view) -> shoeListViewModel.showInstructionsScreen(view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="121dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>