<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_list_welcome"
            style="@style/BoldTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_shoe_list"
            app:layout_constraintBottom_toTopOf="@+id/scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="403dp"
            android:layout_height="461dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/shoe_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:orientation="vertical"
                android:paddingTop="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding">

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:contentDescription="@string/add_shoe_button"
            android:focusable="true"
            android:onClick="@{(view) -> shoeListViewModel.showShoeDetailScreen(view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />


        <TextView
            android:id="@+id/fab_instructions"
            style="@style/WelcomeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fab_instruction"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view"
            app:layout_constraintVertical_bias="0.65" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>